# lengin-earch

back/: config.py  conftest.py  db.py  pyproject.toml  requirements.txt  vercel.py
back/alembic/: env.py  script.py.mako
back/alembic/versions/: 9d61d34122db_create_places.py
back/app/: main.py  place.py
back/domain/place/: models.py  query.py  tables.py
back/domain/place/tests/: test_query_create_plance.py  test_query_list_places_by_distance.py
back/scripts/: places_fixture.py  small.csv
front/: eslint.config.ts  index.html  orval.config.ts  package-lock.json  package.json  postcss.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
front/src/: App.tsx  costants.ts  index.css  main.tsx  types.ts  vite-env.d.ts
front/src/api/default/: default.ts
front/src/api/model/: createPlaceRequest.ts  greating.ts  hTTPValidationError.ts  index.ts  listPlacesEndpointPlacesGetParams.ts  locationPayload.ts  place.ts  responseModelListPlace.ts  responseModelListPlaceMessage.ts  responseModelListPlacePayload.ts  responseModelListPlaceStatus.ts  responseModelPlace.ts  responseModelPlaceMessage.ts  responseModelPlacePayload.ts  responseModelPlaceStatus.ts  validationError.ts  validationErrorLocItem.ts
front/src/api/places/: places.ts
front/src/components/: Base.tsx  Header.tsx  JourneyMap.tsx  PlacePanel.tsx
front/src/components/mapProvider/: MapContext.ts  MapProvider.tsx
front/src/components/placeProvider/: PlaceContext.ts  PlaceProvider.tsx
front/src/components/themeProvider/: ThemeContext.ts  ThemeProvider.tsx
(+1 files in other folders)
