[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.122.0",
    "psycopg2-binary>=2.9.11",
    "psycopg>=3.2.13",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=38.2.0",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
